tests/iterable/iterable.exp
Error ----------------------------------------------------------------------------------------------------- array.js:7:1

Cannot cast array literal to `Iterable` because in property `@@iterator` > the return value > type argument `Yield` [1]:
string [2] is incompatible with number [3]. [incompatible-type]

   array.js:7:1
      7| ['hi'] as Iterable<number>; // Error string ~> number
         ^^^^^^

References:
   <BUILTINS>/core.js:1879:30
   1879| interface $IteratorProtocol<+Yield,+Return=void,-Next=void> {
                                      ^^^^^ [1]
   array.js:7:2
      7| ['hi'] as Iterable<number>; // Error string ~> number
          ^^^^ [2]
   array.js:7:20
      7| ['hi'] as Iterable<number>; // Error string ~> number
                            ^^^^^^ [3]


Error ----------------------------------------------------------------------------------------------------- array.js:8:1

Cannot cast array literal to `Iterable` because in property `@@iterator` > the return value > type argument `Yield` [1]:
number [2] is incompatible with string [3]. [incompatible-type]

   array.js:8:1
      8| ['hi', 1] as Iterable<string>; // Error number ~> string
         ^^^^^^^^^

References:
   <BUILTINS>/core.js:1879:30
   1879| interface $IteratorProtocol<+Yield,+Return=void,-Next=void> {
                                      ^^^^^ [1]
   array.js:8:8
      8| ['hi', 1] as Iterable<string>; // Error number ~> string
                ^ [2]
   array.js:8:23
      8| ['hi', 1] as Iterable<string>; // Error number ~> string
                               ^^^^^^ [3]


Error --------------------------------------------------------------------------------------------- caching_bug.js:21:79

Cannot return `x` because: [incompatible-type]
 - array type [1] is incompatible with `$Iterable` [2]
    - in property `@@iterator` > the return value > type argument `Yield` [3]: number [4] is incompatible with
      string [5]

   caching_bug.js:21:79
     21| function miss_the_cache(x: Array<string | number>): Iterable<string> { return x; }
                                                                                       ^

References:
   caching_bug.js:21:28
     21| function miss_the_cache(x: Array<string | number>): Iterable<string> { return x; }
                                    ^^^^^^^^^^^^^^^^^^^^^^ [1]
   caching_bug.js:21:53
     21| function miss_the_cache(x: Array<string | number>): Iterable<string> { return x; }
                                                             ^^^^^^^^^^^^^^^^ [2]
   <BUILTINS>/core.js:1879:30
   1879| interface $IteratorProtocol<+Yield,+Return=void,-Next=void> {
                                      ^^^^^ [3]
   caching_bug.js:21:43
     21| function miss_the_cache(x: Array<string | number>): Iterable<string> { return x; }
                                                   ^^^^^^ [4]
   caching_bug.js:21:62
     21| function miss_the_cache(x: Array<string | number>): Iterable<string> { return x; }
                                                                      ^^^^^^ [5]


Error ----------------------------------------------------------------------------------------- iterator_result.js:23:31

Cannot return object literal because in property `value`: string [1] is incompatible with undefined [2].
[incompatible-type]

   iterator_result.js:23:31
   23|         return { done, value: "still going..." }; // Error string ~> void
                                     ^^^^^^^^^^^^^^^^ [1]

References:
   iterator_result.js:20:36
   20|     next(): IteratorResult<string, void> {
                                          ^^^^ [2]


Error ----------------------------------------------------------------------------------------- iterator_result.js:25:16

Cannot return object literal because property `value` is missing in object literal [1] but exists in object type [2].
[incompatible-type]

   iterator_result.js:25:16
     25|         return { done }; // Error void ~> string, LTI: prop-missing of value
                        ^^^^^^^^ [1]

References:
   <BUILTINS>/core.js:1869:5
             v
   1869|   | {
   1870|     done: false,
   1871|     +value: Yield,
   1872|     ...
   1873| };
         ^ [2]


Error ----------------------------------------------------------------------------------------------------- map.js:14:10

Cannot return `map` because: [incompatible-type]
 - `Map` [1] is incompatible with `$Iterable` [2]
    - in property `@@iterator` > the return value > type argument `Yield` [3]: tuple type [4] is incompatible with
      string [5]

   map.js:14:10
     14|   return map;
                  ^^^

References:
   map.js:13:24
     13| function mapTest4(map: Map<number, string>): Iterable<string> {
                                ^^^^^^^^^^^^^^^^^^^ [1]
   map.js:13:46
     13| function mapTest4(map: Map<number, string>): Iterable<string> {
                                                      ^^^^^^^^^^^^^^^^ [2]
   <BUILTINS>/core.js:1879:30
   1879| interface $IteratorProtocol<+Yield,+Return=void,-Next=void> {
                                      ^^^^^ [3]
   <BUILTINS>/core.js:2077:28
   2077|     @@iterator(): Iterator<[K, V]>;
                                    ^^^^^^ [4]
   map.js:13:55
     13| function mapTest4(map: Map<number, string>): Iterable<string> {
                                                               ^^^^^^ [5]


Error ----------------------------------------------------------------------------------------------------- set.js:14:10

Cannot return `set` because: [incompatible-type]
 - `Set` [1] is incompatible with `$Iterable` [2]
    - in property `@@iterator` > the return value > type argument `Yield` [3]: string [4] is incompatible with
      number [5]

   set.js:14:10
     14|   return set;
                  ^^^

References:
   set.js:13:24
     13| function setTest4(set: Set<string>): Iterable<number> {
                                ^^^^^^^^^^^ [1]
   set.js:13:38
     13| function setTest4(set: Set<string>): Iterable<number> {
                                              ^^^^^^^^^^^^^^^^ [2]
   <BUILTINS>/core.js:1879:30
   1879| interface $IteratorProtocol<+Yield,+Return=void,-Next=void> {
                                      ^^^^^ [3]
   set.js:13:28
     13| function setTest4(set: Set<string>): Iterable<number> {
                                    ^^^^^^ [4]
   set.js:13:47
     13| function setTest4(set: Set<string>): Iterable<number> {
                                                       ^^^^^^ [5]


Error ---------------------------------------------------------------------------------------------------- string.js:3:2

Cannot cast `new String(...)` to `Iterable` because in property `@@iterator` > the return value > type argument
`Yield` [1]: string [2] is incompatible with number [3]. [incompatible-type]

   string.js:3:2
      3| (new String("hi"): Iterable<number>); // Error - string is a Iterable<string>
          ^^^^^^^^^^^^^^^^

References:
   <BUILTINS>/core.js:1879:30
   1879| interface $IteratorProtocol<+Yield,+Return=void,-Next=void> {
                                      ^^^^^ [1]
   <BUILTINS>/core.js:1298:28
   1298|     @@iterator(): Iterator<string>;
                                    ^^^^^^ [2]
   string.js:3:29
      3| (new String("hi"): Iterable<number>); // Error - string is a Iterable<string>
                                     ^^^^^^ [3]



Found 8 errors
